--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
+# ??????????????? ????????? (???????? ?? ?????)
 spring.application.name=dynamicatest
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.devtools.livereload.enabled=true  
+
+# ???????????? (????????? ??? ???? ???????)
 spring.datasource.url=jdbc:postgresql://localhost:5432/dynamicatest
 spring.datasource.username=postgres
 spring.datasource.password=1221
-spring.datasource.driver-class-name=org.postgresql.Driver
-server.port=8089
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-
+server.port=8088
