--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=konustest
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.devtools.livereload.enabled=true  
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+server.port=4469
