--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<version>1.2.3</version>
 	<name>konustest</name>
 	<description>Entrance test to "Конус" company</description>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -56,17 +57,6 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>3.2.5</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 
 	<build>
