--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=konustest
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.devtools.livereload.enabled=true  
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-
 server.port=${APP_PORT}
