--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.2.3</version>
 	<name>hawkingbrostest</name>
 	<description>Entrance test to "Hawking Bros" company</description>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
